fixed align bug; bumb version 1.1.0; changed back to jsdelivery

--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,7 @@
     min-height: 150px;
     z-index: 999;
     border-radius: 10px;
+    text-align: left;
 }
 
 .consent-axkeg5u7-shadow {
